<resources>
    <!-- Login and register -->
    <string name="app_name" translatable="false">FinanControl</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login" translatable="false">Login</string>
    <string name="register">Register</string>
    <string name="regText">New Here? Click Here to Register </string>
    <string name="conPassword">Confirm Password</string>
    <string name="error">Error</string>
    <string name="notFound">Username or Password incorrect</string>
    <string name="welcome">New Here? Welcome to \n FinanControl</string>
    <string name="email" translatable="false">Email</string>
    <string name="gender">Gender:</string>
    <string name="m" translatable="false">M</string>
    <string name="f" translatable="false">F</string>
    <string name="other">Other</string>
    <string name="back">Back</string>
    <string name="already">User already exists</string>

    <!-- Information -->
    <string name="noInfo">You haven\'t add anything. \n Start now by clicking \n on the + button</string>
    <string name="errorInfo">This is awkward but there was an error </string>

    <!-- Menu -->
    <string name="list">List</string>
    <string name="toPay">To Pay</string>
    <string name="menu">Menu</string>

    <!-- Add Information -->
    <string name="addInfo">Add new Information</string>
    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="value">Value: </string>
    <string name="positive">Lose?</string>
    <string name="add">Add</string>
    <string name="methode">Methode:</string>

    <!-- Categories for the Info-->
    <string name="categories">Categories:</string>
    <string name="groceries">Groceries</string>
    <string name="Drinks">Drinks</string>

    <string name="money">Money</string>
    <string name="MbWay" translatable="false">MbWay</string>
    <string name="Bank">Bank</string>

    <string name="addedInfo">Information Added</string>

    <string name="jan">January</string>
    <string name="feb">February</string>
    <string name="mar">March</string>
    <string name="apr">April</string>
    <string name="may">May</string>
    <string name="jun">June</string>
    <string name="jul">July</string>
    <string name="aug">August</string>
    <string name="sep">September</string>
    <string name="oct">October</string>
    <string name="nov">November</string>
    <string name="dec">December</string>

    <!-- Menu -->
    <string name="logOut">LogOut</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
</resources>