<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.information.AddInfoFragment">

    <EditText
        android:id="@+id/addTitle"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:fontFamily="@font/playfairdisplay_variablefont_wght"
        android:hint="@string/title"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/addValue"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/addTitle" />

    <Switch
        android:id="@+id/addLose"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/playfairdisplay_variablefont_wght"
        android:text="@string/positive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTitle" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/playfairdisplay_variablefont_wght"
        android:gravity="center|center_vertical"
        android:text="@string/value"
        app:layout_constraintStart_toEndOf="@+id/addLose"
        app:layout_constraintTop_toBottomOf="@+id/addTitle" />

    <EditText
        android:id="@+id/addDescription"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:fontFamily="@font/playfairdisplay_variablefont_wght"
        android:hint="@string/desc"
        android:inputType="textMultiLine"
        android:maxHeight="200dp"
        android:scrollIndicators="bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="127dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="128dp"
        android:fontFamily="@font/poppins_black"
        android:text="@string/addInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/addValue">

        <RadioGroup
            android:id="@+id/addCategories"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/addGroceries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:fontFamily="@font/playfairdisplay_variablefont_wght"
                android:gravity="center|center_vertical"
                android:text="@string/groceries" />

            <RadioButton
                android:id="@+id/addDrink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:enabled="false"
                android:fontFamily="@font/playfairdisplay_variablefont_wght"
                android:gravity="center|center_vertical"
                android:text="@string/Drinks" />

            <RadioButton
                android:id="@+id/addOther"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:enabled="false"
                android:fontFamily="@font/playfairdisplay_variablefont_wght"
                android:gravity="center|center_vertical"
                android:text="@string/other" />

        </RadioGroup>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/playfairdisplay_variablefont_wght"
        android:gravity="center|center_vertical"
        android:text="@string/categories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addLose" />

    <Button
        android:id="@+id/addBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="588dp"
        android:enabled="false"
        android:fontFamily="@font/playfairdisplay_variablefont_wght"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/addLoad"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86" />

    <Button
        android:id="@+id/addBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/playfairdisplay_variablefont_wght"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addBtn" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/playfairdisplay_variablefont_wght"
        android:gravity="center|center_vertical"
        android:text="@string/methode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <HorizontalScrollView
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">

        <RadioGroup
            android:id="@+id/addMethode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/addMbWay"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/playfairdisplay_variablefont_wght"
                android:gravity="center|center_vertical"
                android:text="@string/MbWay" />

            <RadioButton
                android:id="@+id/addMoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/playfairdisplay_variablefont_wght"
                android:gravity="center|center_vertical"
                android:text="@string/money" />

            <RadioButton
                android:id="@+id/addBank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/playfairdisplay_variablefont_wght"
                android:gravity="center|center_vertical"
                android:text="@string/Bank" />

        </RadioGroup>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>